// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of the AreaDetail checks if indicators for ISLAND AREAS are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <div>
      Methodology version 0.1
    </div>
    <ul>
      <li>
        <span>
          Census tract:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
        <div />
      </div>
      <div>
         of  thresholds exceeded
      </div>
      <a
        href="
            mailto:Screeningtool-Support@omb.eop.gov?subject=Census tract ID 98729374234, N/A, N/A&body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
        rel="noreferrer"
        target="_blank"
      >
        <button
          class="usa-button"
          data-testid="button"
          type="button"
        >
          <div>
            Send feedback
          </div>
        </button>
      </a>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Median income calculated as a percent of the area’s median income
              </div>
            </div>
            <div>
              <div>
                <div>
                  60
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a percentage of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  90
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Percent of a tract's population in households where the household income is at or below 100% of 
      the Federal poverty level   
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  50
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school degree attainment rate
              <div>
                
      Proportion of people ages 25 years or older whose education level is less than a high school diploma 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school degree attainment rate
              <div>
                
      Poportion of people ages 25 years or older whose education level is less than a high school diploma 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the AreaDetail checks if indicators for NATION is present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <div>
      Methodology version 0.1
    </div>
    <ul>
      <li>
        <span>
          Census tract:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          State: 
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
        <div />
      </div>
      <div>
         of  thresholds exceeded
      </div>
      <a
        href="
            mailto:Screeningtool-Support@omb.eop.gov?subject=Census tract ID 98729374234, N/A, N/A&body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
        rel="noreferrer"
        target="_blank"
      >
        <button
          class="usa-button"
          data-testid="button"
          type="button"
        >
          <div>
            Send feedback
          </div>
        </button>
      </a>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="climate-change"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_climate-change"
          type="button"
        >
          <div>
            <div>
              Climate change
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_climate-change"
        hidden=""
        id="climate-change"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected agriculture loss rate
              <div>
                Economic loss rate to agriculture resulting from natural hazards
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected building loss rate
              <div>
                Economic loss rate to buildings resulting from natural hazards
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected population loss rate
              <div>
                
      Rate of fatalities and injuries resulting from natural hazards each year
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-energy"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-energy"
          type="button"
        >
          <div>
            <div>
              Clean energy and energy efficiency
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-energy"
        hidden=""
        id="clean-energy"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Energy burden
              <div>
                Average annual energy costs divided by household income
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              PM2.5 in the air
              <div>
                Fine inhalable particles, 2.5 micrometers and smaller
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-transport"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-transport"
          type="button"
        >
          <div>
            <div>
              Clean transportation
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-transport"
        hidden=""
        id="clean-transport"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diesel particulate matter exposure
              <div>
                Diesel exhaust in the air
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Traffic proximity and volume
              <div>
                Count of vehicles at major roads within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="sustain-house"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_sustain-house"
          type="button"
        >
          <div>
            <div>
              Sustainable housing
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_sustain-house"
        hidden=""
        id="sustain-house"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Housing cost burden
              <div>
                Low income households spending more than 30% of income on housing
              </div>
            </div>
            <div>
              <div>
                <div>
                  95
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lead paint
              <div>
                
      Percentile of number of homes built before 1960 that are not among the most expensive
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="leg-pollute"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_leg-pollute"
          type="button"
        >
          <div>
            <div>
              Legacy pollution
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_leg-pollute"
        hidden=""
        id="leg-pollute"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to hazardous waste facilities
              <div>
                Count of hazardous waste facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to NPL sites
              <div>
                Proposed or listed NPL (Superfund) sites within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to RMP facilities
              <div>
                Risk Management Plan facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-water"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-water"
          type="button"
        >
          <div>
            <div>
              Clean water and waste infrastructure
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-water"
        hidden=""
        id="clean-water"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Wastewater discharge
              <div>
                Toxic concentrations at stream segments within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="health-burdens"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_health-burdens"
          type="button"
        >
          <div>
            <div>
              Health burdens
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_health-burdens"
        hidden=""
        id="health-burdens"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Asthma
              <div>
                Weighted percent of people who have been told they have asthma
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diabetes
              <div>
                
      Weighted percent of people ages 18 years and older who have diabetes other than 
      diabetes during pregnancy
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Heart disease
              <div>
                
      Weighted percent of people ages 18 years and older who have been told they have heart disease
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low life expectancy
              <div>
                Average number of years a person can expect to live
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
      Household income is less than or equal to twice the federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 65th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Linguistic isolation
              <div>
                
      Percent of households where no one over the age 14 speaks English well
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  97
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Median income calculated as a percent of the area’s median income
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a percentage of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Percent of a tract's population in households where the household income is at or below 100% of 
      the Federal poverty level   
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school degree attainment rate
              <div>
                
      Proportion of people ages 25 years or older whose education level is less than a high school diploma 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  98
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90
                </div>
                <div>
                  percent
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the AreaDetail checks if indicators for PUERTO RICO are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <div>
      Methodology version 0.1
    </div>
    <ul>
      <li>
        <span>
          Census tract:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           N/A
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
        <div />
      </div>
      <div>
         of  thresholds exceeded
      </div>
      <a
        href="
            mailto:Screeningtool-Support@omb.eop.gov?subject=Census tract ID 98729374234, N/A, N/A&body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
        rel="noreferrer"
        target="_blank"
      >
        <button
          class="usa-button"
          data-testid="button"
          type="button"
        >
          <div>
            Send feedback
          </div>
        </button>
      </a>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <div>
          <div>
            Exceeds the threshold for one or more burden indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Linguistic isolation
              <div>
                
      Percent of households where no one over the age 14 speaks English well
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  97
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Median income calculated as a percent of the area’s median income
              </div>
            </div>
            <div>
              <div>
                <div>
                  <sup>
                    <span />
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a percentage of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Percent of a tract's population in households where the household income is at or below 100% of 
      the Federal poverty level   
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup>
                    <span>
                      th
                    </span>
                  </sup>
                </div>
                <div>
                  <img
                    alt="an icon for the down arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  below 90th
                </div>
                <div>
                  percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <div>
          <div>
            Exceeds the threshold for both socioeconomic indicators?
          </div>
          <div>
            No
          </div>
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school degree attainment rate
              <div>
                
      Proportion of people ages 25 years or older whose education level is less than a high school diploma 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  98
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon for the up arrow"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  above 90
                </div>
                <div>
                  percent
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Higher ed enrollment rate
              <div>
                
    Percent of population enrolled in college, university, or graduate school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    %
                  </span>
                </div>
                <div>
                  <img
                    alt="an icon to represent data is unavailable"
                    src="test-file-stub"
                  />
                </div>
              </div>
              <div>
                <div>
                  data is not available
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
  </aside>
</DocumentFragment>
`;
